<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">translationStudio</string>
    <string name="title_projects">Project</string>
    <string name="title_frames">Frame</string>
    <string name="label_ok">OK</string>
    <string name="label_close">Close</string>
    <string name="title_cancel">Cancel</string>
    <string name="error_task_running" translatable="false">A task is already running</string>
    <string name="error_out_of_memory" translatable="false">Out of memory</string>
    <string name="error_repository_not_found" translatable="false">Repository Not Found</string>
    <string name="uploading">Uploading</string>
    <string name="error_could_not_create_repository" translatable="false">Could not create repository</string>
    <string name="terms_title">Terms of Use</string>
    <string name="terms">By using this app you agree with the statement of faith and translation guidelines and to release your work under the terms of the Creative Commons Attribution-ShareAlike 4.0 International License.</string>
    <string name="title_close_drawer" translatable="false">close</string>
    <string name="chapter_title_field">Chapter Title</string>
    <string name="chapter_reference_field">Chapter Reference</string>
    <string name="source_language_field">Source</string>
    <string name="target_language">Target Language</string>
    <string name="title_activity_chapter_setting">Chapter Translation</string>
    <string name="title_activity_language_selector">Language</string>
    <string name="loading_project_chapters" translatable="false">@string/loading</string>
    <string name="success">Success</string>
    <string name="label_details">details</string>
    <string name="title_activity_sharing">Share</string>
    <string name="missing_external_storage">External storage not available</string>
    <string name="project_exported_to">Project saved to <xliff:g example="/storage/sdcard1/" id="file_path">%1$s</xliff:g></string>
    <string name="project_share_exception" translatable="false">The project cannot be shared</string>
    <string name="title_activity_file_explorer">File Explorer</string>
    <string name="missing_file" translatable="false">The file does not exist</string>
    <string name="backup_to_app">Send to another app</string>
    <string name="backup_to_sd">Export Project File</string>
    <string name="export_as_project" translatable="false">@string/app_name</string>
    <string name="export_as_dokuwiki" translatable="false">DokuWiki</string>
    <string name="translation_import_failed">Failed to import</string>
    <string name="internet_not_available">No internet connection</string>
    <string name="backup_and_publish">Backup and Publish</string>
    <string name="upload_wizard_intro">You are about to upload your translation.</string>
    <string name="label_continue">Continue</string>
    <string name="next">Next</string>
    <string name="upload_wizard_overview">Upload Review</string>
    <string name="label_project_details">Project details</string>
    <string name="project_details"><xliff:g example="Open Bible Stories" id="project">\"%1$s\"</xliff:g> is being translated from the <xliff:g example="English" id="source_language">\"%2$s\"</xliff:g> language into the <xliff:g example="Deutsch" id="target_language">\"%3$s\"</xliff:g> language.</string>
    <string name="click_for_details">Click for details</string>
    <string name="title_project_settings">Project Languages</string>
    <string name="error_target_and_source_are_same">Source and target languages must not match</string>
    <string name="error_chapter_title_missing">Chapter title missing</string>
    <string name="error_chapter_reference_missing">Chapter reference missing</string>
    <string name="label_chapter_title_detailed">Chapter <xliff:g example="1. The Creation" id="chapter">%1$s</xliff:g></string>
    <string name="label_frame_title_detailed">Frame: <xliff:g example="1" id="frame">%1$s</xliff:g></string>
    <string name="dialog_validation_errors">Validation Errors</string>
    <string name="validation_errors">Unresolved errors. Please correct them and try again</string>
    <string name="error_frames_not_translated"><xliff:g example="5" id="number">%1$s</xliff:g> frames have not been translated.</string>
    <string name="dialog_validation_warnings">Validation Warnings</string>
    <string name="validation_warnings">There are unresolved warnings. Continue?</string>
    <string name="no_translated_chapters">Nothing has been translated</string>
    <string name="title_chapters">Chapter</string>
    <string name="now_viewing_frame">Viewing frame <xliff:g example="1" id="number">%1$s</xliff:g> in chapter <xliff:g example="1. The Creation" id="chapter">%2$s</xliff:g>.</string>
    <string name="missing_chapter" translatable="false">Missing chapter</string>
    <string name="label_translation_notes">Notes</string>
    <string name="label_passage_note">Passage note:</string>
    <string name="label_delete">Delete</string>
    <string name="source_language_instructions">Completed translations</string>
    <string name="target_language_instructions">Not started or in-progress translations</string>
    <string name="notes_cannot_overlap">Notes cannot overlap</string>
    <string name="currently_viewed_frame_index">Frame <xliff:g example="2" id="current_frame">%1$s</xliff:g> of <xliff:g example="10" id="total_frames">%2$s</xliff:g></string>
    <string name="git_awaiting_report" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Push process is awaiting update report from remote repository.</string>
    <string name="git_non_existing" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Remote ref didn\'t exist.</string>
    <string name="git_not_attempted" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%s</xliff:g>] Push process hasn\'t yet attempted to update this ref.</string>
    <string name="git_ok" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Success push to remote ref.</string>
    <string name="git_rejected_nondelete" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Remote ref update was rejected, because remote side doesn\'t support/allow deleting refs.</string>
    <string name="git_rejected_nonfastforward" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Remote ref update was rejected, as it would cause non fast-forward update.</string>
    <string name="git_rejected_other_reason" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Remote ref update was rejected.</string>
    <string name="git_rejected_other_reason_detailed" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Remote ref update was rejected, because <xliff:g example="error message" id="error">%2$s.</xliff:g></string>
    <string name="git_rejected_remote_changed" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] Remote ref update was rejected,  because old object id on remote repository wasn\'t the same as defined expected old object.</string>
    <string name="git_uptodate" translatable="false">[<xliff:g example="refs/heads/master" id="remote">%1$s</xliff:g>] remote ref is up to date</string>
    <string name="git_server_details" translatable="false">Server: <xliff:g example="gitolite3@ts.door43.org:tS/46983314849sd54s6d/uw-obs-de" id="server">%1$s</xliff:g></string>
    <string name="opening_project">Opening project</string>
    <string name="loading_key_terms" translatable="false">@string/loading</string>
    <string name="loading_translation_notes" translatable="false">@string/loading</string>
    <string name="loading_target_language">Loading target language: <xliff:g example="Deutsch" id="language">%1$s</xliff:g></string>
    <string name="loading_project">Loading project: <xliff:g example="Open Bible Stories" id="project">%1$s</xliff:g></string>
    <string name="error_git_stage" translatable="false">Changes could not be staged</string>
    <string name="submitting_security_keys">Transferring security keys</string>
    <string name="error_missing_ssh_keys" translatable="false">The ssh keys have not been generated</string>
    <string name="choose_file">Choose file</string>
    <string name="choose_source_language">Choose Source</string>
    <string name="choose_target_language">Choose Target</string>
    <string name="project_archive_missing" translatable="false">Project archive not found</string>
    <string name="search_language">Search languages</string>
    <string name="loading">Loading</string>
    <string name="view_license_agreement">License Agreement</string>
    <string name="license_deny">No Thanks</string>
    <string name="license_accept">I Agree</string>
    <string name="label_display_as_footnote" translatable="false">Display as footnote</string>
    <string name="label_note_phrase">Selected phrase:</string>
    <string name="related_terms">See Also:</string>
    <string name="term_examples">Examples:</string>
    <string name="project_uploaded">Project successfully uploaded</string>
    <string name="choose_frame_to_start">Open a project to start translating</string>
    <string name="return_to_important_terms">Return to Words</string>
    <string name="no_translation_notes">No notes</string>
    <string name="translation_words">Words</string>
    <string name="translation_check_notice">We will now perform a few checks to ensure your translation is ready.</string>
    <string name="preparing_upload">Preparing upload</string>
    <string name="choose_a_project">Please open a project</string>
    <string name="choose_a_chapter">Please open a chapter</string>
    <string name="title_activity_crash_reporter">Error Report</string>
    <string name="title_activity_bug_reporter">Bug Report</string>
    <string name="crash_details">What were you doing just before the app crashed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="import_from_device" translatable="false">Import From Another Device</string>
    <string name="action_settings">Settings</string>
    <string name="action_download_all">Download all</string>
    <string name="action_edit_projects">Edit Projects</string>
    <string name="action_cancel_edit_projects">Stop Editing Projects</string>
    <string name="action_search">Search</string>
    <string name="action_translations">Home</string>
    <string name="requires_internet">This will use your Internet Connection</string>
    <string name="name">Name or Pseudonym</string>
    <string name="menu_update_library">Update</string>
    <string name="feedback">Feedback</string>
    <string name="action_download_updates">Download updates</string>
    <string name="label_import">Import</string>
    <string name="label_import_options">Import</string>
    <string name="print">Print</string>
    <string name="add_contributor">Add Contributor</string>
    <string name="view_available_drafts">View available drafts</string>
    <string name="door43_account_required">You must connect to a Door43 account first.</string>
    <string name="login_doo43">Login with Door43 Account</string>
    <string name="register_door43">Create new Door43 Account</string>
    <string name="title_connect_door43">Connect To Door43</string>
    <string name="import_from_door43">Import from Door43</string>
    <string name="import_usfm_file">Import USFM File</string>
    <string name="title_upload_export">Upload/Export Options</string>
    <string name="title_review">Project Review</string>
    <string name="import_project_file">Import Project File</string>
    <string name="import_source_text">Import Source Text</string>
</resources>