<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.door43.translationstudio.newui.home.HomeActivity">

    <item android:id="@+id/action_update"
        android:title="@string/menu_update_library"
        android:orderInCategory="100"
        android:icon="@drawable/ic_local_library_black_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_import"
        android:title="@string/label_import"
        android:orderInCategory="100"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_feedback"
        android:title="@string/feedback"
        android:orderInCategory="100"
        android:icon="@drawable/ic_feedback_black_24dp"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never" />
</menu>