<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.door43.translationstudio.ProjectLibrary">
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:icon="@drawable/ic_search_light"
        android:orderInCategory="100" app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <!--<item android:id="@+id/action_filter" android:title="@string/action_filter"-->
        <!--android:icon="@drawable/ic_filter_light"-->
        <!--android:orderInCategory="200" app:showAsAction="ifRoom" />-->
    <item android:id="@+id/action_download_all" android:title="@string/action_download_all"
        android:orderInCategory="600" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_edit_projects" android:title="@string/action_edit_projects"
        android:orderInCategory="700" app:showAsAction="never" />
    <item android:id="@+id/action_cancel_edit_projects" android:title="@string/action_cancel_edit_projects"
        android:orderInCategory="800" app:showAsAction="never" />
</menu>
