<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.door43.translationstudio.ProjectLibrary">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_search_white_24dp"
        android:iconifiedByDefault="true"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_download_all"
        android:title="@string/action_download_all"
        android:orderInCategory="600"
        app:showAsAction="never" />

    <item android:id="@+id/action_download_updates"
        android:title="@string/action_download_updates"
        android:orderInCategory="500"
        app:showAsAction="never" />

</menu>
