<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.door43.translationstudio.uploadwizard.old.OverviewFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:text="@string/backup_and_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/h3"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_wizard_intro"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_project_details"
                android:textSize="@dimen/h4"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_details"
                android:id="@+id/project_details_text" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:background="@drawable/border_top"
                android:clickable="true"
                android:layout_marginTop="20dp"
                android:gravity="right">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/translation_complete"
                    android:id="@+id/translationIsCompleteSwitch"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/translation_check_notice"
                android:id="@+id/translationChecksNoticeTextView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:gravity="bottom">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_cancel"
                android:id="@+id/upload_wizard_cancel_btn"
                android:layout_weight="1"
                style="@style/Widget.Button.Secondary"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_continue"
                android:id="@+id/upload_wizard_continue_btn"
                android:layout_weight="1"
                style="@style/Widget.Button.Primary"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
