<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/dialog_min_width">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_content_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/headline"
            android:textColor="@color/dark_primary_text"
            android:text="@string/title_connect_door43"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/door43_account_required"
            android:layout_marginBottom="@dimen/dialog_content_margin"
            android:textSize="@dimen/body"
            android:textColor="@color/dark_secondary_text"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_content_margin">

            <LinearLayout
                android:id="@+id/login_door43"
                style="@style/Widget.CardContent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body"
                    android:textColor="@color/dark_primary_text"
                    android:text="@string/login_doo43"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption"
                    android:textColor="@color/dark_secondary_text"
                    android:text="@string/requires_internet"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/register_door43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body"
                    android:textColor="@color/dark_primary_text"
                    android:text="@string/register_door43"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption"
                    android:textColor="@color/dark_secondary_text"
                    android:text="@string/requires_internet"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/dialog_controls_margin"
        android:gravity="right|end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            android:layout_marginLeft="@dimen/dialog_controls_margin"
            android:text="@string/title_cancel"
            style="@style/Widget.Alert.Button"/>
    </LinearLayout>
</LinearLayout>
