<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="@dimen/dialog_min_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_content_margin"
        android:layout_marginBottom="@dimen/dialog_content_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_import_options"
            android:layout_marginBottom="@dimen/dialog_content_margin"
            android:textColor="@color/dark_primary_text"
            android:textAlignment="center"
            android:textSize="@dimen/headline"
            android:id="@+id/title" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/import_from_door43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_from_door43"
                android:textColor="@color/dark_primary_text"
                android:textAllCaps="false"
                style="@style/Widget.Button.Secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_separator"/>

            <Button
                android:id="@+id/import_target_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_project_file"
                android:textAllCaps="false"
                android:textColor="@color/dark_primary_text"
                style="@style/Widget.Button.Secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_separator"/>

            <Button
                android:id="@+id/import_usfm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_usfm_file"
                android:textAllCaps="false"
                android:textColor="@color/dark_primary_text"
                style="@style/Widget.Button.Secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_separator"/>

            <Button
                android:id="@+id/import_resource_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_source_text"
                android:textAllCaps="false"
                android:textColor="@color/dark_primary_text"
                style="@style/Widget.Button.Secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_separator"/>

            <Button
                android:id="@+id/import_from_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_from_device"
                android:textColor="@color/dark_primary_text"
                android:textAllCaps="false"
                style="@style/Widget.Button.Secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/list_separator"/>

                android:background="@color/list_separator"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/dialog_controls_margin"
        android:gravity="right|end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/dismiss_button"
            android:layout_marginLeft="@dimen/dialog_controls_margin"
            android:text="@string/title_cancel"
            style="@style/Widget.Alert.Button"/>
    </LinearLayout>
</LinearLayout>