<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contributor"
        android:textSize="@dimen/headline"
        android:textColor="@color/dark_primary_text"
        android:layout_margin="@dimen/dialog_content_margin"/>

    <EditText
        android:layout_margin="@dimen/dialog_content_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLines="1"
        android:background="@drawable/edit_text"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_controls_margin"
        android:gravity="right|end">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/title_cancel"
            android:layout_marginRight="@dimen/dialog_controls_margin"
            style="@style/Widget.Alert.Button.Secondary"/>

        <Button
            android:id="@+id/save_button"
            android:text="@string/menu_save"
            style="@style/Widget.Alert.Button"/>
    </LinearLayout>
</LinearLayout>